// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton should render correctly 1`] = `
<Tooltip
  content="Icon button text"
>
  <div>
    <IconButton__StyledButton
      highlightOnHover={true}
      onClick={[Function]}
      uniqueHash="Fixed random hash for snapshot test"
    >
      <InlineSVG
        cacheGetRequests={false}
        onLoad={[Function]}
        src="icon-add-page.svg"
        supportTest={[Function]}
        uniqueHash="Fixed random hash for snapshot test"
        uniquifyIDs={true}
        wrapper={[Function]}
      />
      Icon button text
    </IconButton__StyledButton>
  </div>
</Tooltip>
`;

exports[`IconButton should render icon only 1`] = `
<Tooltip
  content="Icon button text"
>
  <div>
    <IconButton__StyledButton
      highlightOnHover={true}
      onClick={[Function]}
      uniqueHash="Fixed random hash for snapshot test"
    >
      <InlineSVG
        cacheGetRequests={false}
        onLoad={[Function]}
        src="icon-add-page.svg"
        supportTest={[Function]}
        uniqueHash="Fixed random hash for snapshot test"
        uniquifyIDs={true}
        wrapper={[Function]}
      />
      <VisuallyHidden>
        Icon button text
      </VisuallyHidden>
    </IconButton__StyledButton>
  </div>
</Tooltip>
`;
